--- a/H5share.css
+++ b/H5share.css
@@ -102,6 +102,7 @@ li {
   text-align: right;
   padding: 0 10px;
   font-size: 16px;
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .qr_code .qr_img {
