--- a/H5share.scss
+++ b/H5share.scss
@@ -94,6 +94,7 @@ li {
         text-align: right;
         padding: 0 10px;
         font-size: 16px;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
     .qr_img {
         width: 150px;
