--- a/H5share.scss
+++ b/H5share.scss
@@ -1,124 +1,367 @@
-@charset 'utf-8';
-html,
-body,
-a,
-div,
-ul,
-li,
-p {
-    margin: 0;
-    padding: 0;
-    font-size: 14px;
-}
-
-a {
-    text-decoration: none;
-    color: #000;
-}
-
-ul,
-li {
-    list-style: none;
-}
-
-
-.qr_share {
-    margin-top: 50px;
-    ul {
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        text-align: center;
-        li {
-            padding: 0 5px;
-        }
-        a {
-            font-size: 20px;
-        }
-        .num {
-            font-size: 12px;
-            padding: 1px 8px;
-            border-radius: 4px;
-            background-color: #fff;
-            border: 1px solid #d4d4d4;
-            position: relative;
-            &:before {
-                content: '';
-                position: absolute;
-                width: 0;
-                height: 0;
-                border-color: transparent;
-                border-style: solid;
-                border-width: 6px 6px 6px 0;
-                border-right-color: #fafafa;
-                top: 50%;
-                left: -5px;
-                margin-top: -6px;
-            }
-            &:after {
-                content: '';
-                position: absolute;
-                width: 0;
-                height: 0;
-                border-color: transparent;
-                border-style: solid;
-                border-width: 7px 7px 7px 0;
-                top: 50%;
-                left: -6px;
-                margin-top: -7px;
-                border-right-color: #d4d4d4;
-                z-index: -1;
-            }
-        }
+    @charset 'utf-8';
+    html,
+    body,
+    a,
+    div,
+    ul,
+    li,
+    p,
+    h2 {
+        margin: 0;
+        padding: 0;
+        font-size: 14px;
+        font-family: ''
     }
-    .icon-xinlang-copy:before {
-        color: #e84546;
-    }
-    .icon-pengyouquan1:before {
-        color: #99cf55;
-    }
-}
 
-.qr_code {
-    margin: 0 auto;
-    background-color: rgba(255, 255, 255, 1);
-    text-align: center;
-    width: 220px;
-    z-index: 111;
-    position: absolute;
-    top: 0;
-    left: 50%;
-    margin-left: -110px;
-    display: none;
-    .qr_close {
-        text-align: right;
-        padding: 0 10px;
-        font-size: 16px;
-        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    a {
+        text-decoration: none;
+        color: #000;
     }
-    .qr_img {
-        width: 150px;
-        height: 150px;
-        margin: 5px auto;
-        img {
-            width: 100%;
-            display: table-cell;
-            vertical-align: middle;
+
+    ul,
+    li {
+        list-style: none;
+    }
+
+    .qr_share {
+        margin-top: 50px;
+        ul {
+            display: flex;
+            justify-content: center;
+            align-items: center;
             text-align: center;
+            li {
+                padding: 0 5px;
+                a:nth-child(2) {
+                    font-size: 21px;
+                }
+            }
+            a {
+                font-size: 20px;
+            }
+            .num {
+                font-size: 12px;
+                padding: 1px 8px;
+                border-radius: 4px;
+                background-color: #fff;
+                border: 1px solid #d4d4d4;
+                position: relative;
+                &:before {
+                    content: '';
+                    position: absolute;
+                    width: 0;
+                    height: 0;
+                    border-color: transparent;
+                    border-style: solid;
+                    border-width: 6px 6px 6px 0;
+                    border-right-color: #fafafa;
+                    top: 50%;
+                    left: -5px;
+                    margin-top: -6px;
+                }
+                &:after {
+                    content: '';
+                    position: absolute;
+                    width: 0;
+                    height: 0;
+                    border-color: transparent;
+                    border-style: solid;
+                    border-width: 7px 7px 7px 0;
+                    top: 50%;
+                    left: -6px;
+                    margin-top: -7px;
+                    border-right-color: #d4d4d4;
+                    z-index: -1;
+                }
+            }
+        }
+        .icon-xinlang-copy:before {
+            color: #e84546;
+        }
+        .icon-pengyouquan1:before {
+            color: #99cf55;
         }
     }
-    .qr_content {
-        padding: 5px 0;
-    }
-}
 
-.modal {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    background-color: rgba(0, 0, 0, .6);
-    z-index: 11;
-    display: none;
-}
+    .qr_code {
+        margin: 0 auto;
+        background-color: rgba(255, 255, 255, 1);
+        text-align: center;
+        width: 250px;
+        z-index: 111;
+        position: absolute;
+        top: 0;
+        left: 50%;
+        margin-left: -125px;
+        border-radius: 10px;
+        display: none; // .weixin_mobile{
+        //     display: none;
+        // }
+        // .weixin_pc{
+        //     display: none;
+        // }
+        .qr_close {
+            text-align: right;
+            padding: 5px 10px 0 10px;
+            font-size: 16px;
+            font-family: Arial, sans-serif;
+            color: #939393;
+        }
+        .qr_img {
+            width: 150px;
+            height: 150px;
+            margin: 10px auto;
+            img {
+                width: 100%;
+                display: table-cell;
+                vertical-align: middle;
+                text-align: center;
+            }
+        }
+        .qr_content {
+            padding: 5px 0;
+            border-top: 1px dashed #ccc;
+            p {
+                font-size: 11px;
+                padding: 5px;
+            }
+        }
+    }
+
+    .success_failure {
+        .failure {
+            margin: 0 auto;
+            background-color: rgba(219, 219, 219, 1);
+            text-align: center;
+            width: 250px;
+            z-index: 111;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -125px;
+            border-radius: 10px;
+            display: none;
+            .qr_close {
+                text-align: right;
+                padding: 5px 10px 0 10px;
+                font-size: 16px;
+                font-family: Arial, sans-serif;
+                color: #939393;
+            }
+            h2 {
+                line-height: 26px;
+            }
+            .icon-cuowu1:before {
+                vertical-align: middle;
+                padding-right: 12px;
+                font-size: 24px;
+                color: #b63d31;
+            }
+            p {
+                padding: 20px;
+                font-size: 11px;
+                color: #a9a9a9;
+            }
+        }
+        .success {
+            margin: 0 auto;
+            background-color: rgba(255, 255, 255, 1);
+            text-align: center;
+            width: 250px;
+            z-index: 111;
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin-left: -125px;
+            border-radius: 10px;
+            display: none;
+            .qr_close {
+                text-align: right;
+                padding: 5px 10px 0 10px;
+                font-size: 16px;
+                font-family: Arial, sans-serif;
+                color: #939393;
+            }
+            h2 {
+                line-height: 26px;
+            }
+            .icon-duigou1:before {
+                vertical-align: middle;
+                padding-right: 12px;
+                font-size: 24px;
+                color: #95d27f;
+            }
+            p {
+                padding: 20px;
+                font-size: 11px;
+                color: #a9a9a9;
+            }
+        }
+    }
+
+    .modal {
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        left: 0;
+        background-color: rgba(0, 0, 0, .6);
+        z-index: 11;
+        display: none;
+    }
+    /*mobile*/
+
+    @media only screen and (max-width:667px) {
+        .qr_sina {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin: 0 auto;
+            width: 80%;
+            z-index: 111;
+            margin-left: -40%;
+            background-color: rgba(255, 255, 255, 1);
+            border-radius: 10px;
+            text-align: center;
+            display: none;
+            .content {
+                padding: 0 10px;
+            }
+            .sina_close {
+                text-align: right;
+                padding-top: 5px;
+                font-size: 16px;
+                font-family: Arial, sans-serif;
+                color: #939393;
+            }
+            h2 {
+                text-align: center;
+                font-size: 16px;
+            }
+            .text {
+                padding: 10px 0;
+                textarea {
+                    width: 95%;
+                    height: 100px;
+                }
+            }
+            .text_num {
+                // display: none;
+                p {
+                    text-align: right;
+                    font-size: 10px;
+                    font-weight: 700;
+                }
+            }
+            .checked {
+                div {
+                    text-align: left;
+                }
+                label {
+                    font-size: 12px;
+                }
+                input {
+                    vertical-align: middle;
+                }
+            }
+            .btn {
+                text-align: right;
+                padding: 10px 0;
+                input {
+                    color: #fff;
+                    background-color: #7db3dd;
+                    border: 0;
+                    border-radius: 3px;
+                    padding: 3px 10px;
+                    font-size: 12px;
+                    vertical-align: middle;
+                }
+            }
+            .footer {
+                padding: 6px;
+                border-top: 1px dashed #c5c5c5;
+                text-align: right;
+                p {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
+    /*pc*/
+
+    @media only screen and (min-width:668px) {
+        .qr_sina {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            margin: 0 auto;
+            width: 50%;
+            z-index: 111;
+            margin-left: -25%;
+            background-color: rgba(255, 255, 255, 1);
+            border-radius: 10px;
+            text-align: center;
+            display: none;
+            .content {
+                padding: 0 10px;
+            }
+            .sina_close {
+                text-align: right;
+                padding-top: 5px;
+                font-size: 16px;
+                font-family: Arial, sans-serif;
+                color: #939393;
+            }
+            h2 {
+                text-align: center;
+                font-size: 16px;
+            }
+            .text {
+                padding: 10px 0;
+                textarea {
+                    width: 95%;
+                    height: 100px;
+                }
+            }
+            .text_num {
+                // display: none;
+                p {
+                    text-align: right;
+                    font-size: 10px;
+                    font-weight: 700;
+                }
+            }
+            .checked {
+                div {
+                    text-align: left;
+                }
+                label {
+                    font-size: 12px;
+                }
+                input {
+                    vertical-align: middle;
+                }
+            }
+            .btn {
+                text-align: right;
+                padding: 10px 0;
+                input {
+                    color: #fff;
+                    background-color: #7db3dd;
+                    border: 0;
+                    border-radius: 3px;
+                    padding: 3px 10px;
+                    font-size: 12px;
+                    vertical-align: middle;
+                }
+            }
+            .footer {
+                padding: 6px;
+                border-top: 1px dashed #c5c5c5;
+                text-align: right;
+                p {
+                    font-size: 12px;
+                }
+            }
+        }
+    }
