--- a/font/iconfont.css
+++ b/font/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1497509775052'); /* IE9*/
-  src: url('iconfont.eot?t=1497509775052#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1497509775052') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1497509775052') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1497509775052#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1498457353276'); /* IE9*/
+  src: url('iconfont.eot?t=1498457353276#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1498457353276') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1498457353276') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1498457353276#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -24,6 +24,10 @@
 .icon-weixinpengyouquan:before { content: "\e68a"; }
 
 .icon-xinlang-copy:before { content: "\e601"; }
+
+.icon-cuowu1:before { content: "\e617"; }
+
+.icon-duigou1:before { content: "\e603"; }
 
 .icon-pengyouquan:before { content: "\e644"; }
 
