--- a/H5share.css
+++ b/H5share.css
@@ -299,7 +299,7 @@ li {
 }
 
 /*pc*/
-@media only screen and (min-width: 668px) {
+@media (min-width: 668px) {
   .qr_sina {
     position: absolute;
     top: 0;
