--- a/H5share.scss
+++ b/H5share.scss
@@ -289,7 +289,7 @@
     }
     /*pc*/
 
-    @media only screen and (min-width:668px) {
+    @media (min-width:668px) {
         .qr_sina {
             position: absolute;
             top: 0;
