--- a/H5share.css
+++ b/H5share.css
@@ -105,12 +105,17 @@ li {
   display: none;
 }
 
+.qr_code h2 {
+  font-weight: 400;
+}
+
 .qr_code .qr_close {
   text-align: right;
   padding: 5px 10px 0 10px;
   font-size: 16px;
   font-family: Arial, sans-serif;
   color: #939393;
+  cursor: pointer;
 }
 
 .qr_code .qr_img {
@@ -156,6 +161,7 @@ li {
   font-size: 16px;
   font-family: Arial, sans-serif;
   color: #939393;
+  cursor: pointer;
 }
 
 .success_failure .failure h2 {
@@ -195,6 +201,7 @@ li {
   font-size: 16px;
   font-family: Arial, sans-serif;
   color: #939393;
+  cursor: pointer;
 }
 
 .success_failure .success h2 {
@@ -253,6 +260,7 @@ li {
   .qr_sina h2 {
     text-align: center;
     font-size: 16px;
+    font-weight: 400;
   }
   .qr_sina .text {
     padding: 10px 0;
@@ -260,11 +268,11 @@ li {
   .qr_sina .text textarea {
     width: 95%;
     height: 100px;
+    border: 1px solid #dfdfdf;
   }
   .qr_sina .text_num p {
     text-align: right;
     font-size: 10px;
-    font-weight: 700;
   }
   .qr_sina .checked div {
     text-align: left;
@@ -287,6 +295,9 @@ li {
     padding: 3px 10px;
     font-size: 12px;
     vertical-align: middle;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
   }
   .qr_sina .footer {
     padding: 6px;
@@ -322,10 +333,12 @@ li {
     font-size: 16px;
     font-family: Arial, sans-serif;
     color: #939393;
+    cursor: pointer;
   }
   .qr_sina h2 {
     text-align: center;
     font-size: 16px;
+    font-weight: 400;
   }
   .qr_sina .text {
     padding: 10px 0;
@@ -333,14 +346,20 @@ li {
   .qr_sina .text textarea {
     width: 95%;
     height: 100px;
+    border: 1px solid #dfdfdf;
+  }
+  .qr_sina .text_num {
+    padding: 0 14px;
+    box-sizing: border-box;
   }
   .qr_sina .text_num p {
     text-align: right;
     font-size: 10px;
-    font-weight: 700;
   }
   .qr_sina .checked div {
     text-align: left;
+    padding: 0 6px;
+    box-sizing: border-box;
   }
   .qr_sina .checked label {
     font-size: 12px;
@@ -350,7 +369,8 @@ li {
   }
   .qr_sina .btn {
     text-align: right;
-    padding: 10px 0;
+    padding: 10px 14px;
+    box-sizing: border-box;
   }
   .qr_sina .btn input {
     color: #fff;
@@ -360,9 +380,14 @@ li {
     padding: 3px 10px;
     font-size: 12px;
     vertical-align: middle;
+    appearance: none;
+    -moz-appearance: none;
+    -webkit-appearance: none;
+    cursor: pointer;
   }
   .qr_sina .footer {
-    padding: 6px;
+    padding: 10px 14px;
+    box-sizing: border-box;
     border-top: 1px dashed #c5c5c5;
     text-align: right;
   }
