--- a/H5share.scss
+++ b/H5share.scss
@@ -94,18 +94,17 @@
         left: 50%;
         margin-left: -125px;
         border-radius: 10px;
-        display: none; // .weixin_mobile{
-        //     display: none;
-        // }
-        // .weixin_pc{
-        //     display: none;
-        // }
+        display: none; 
+        h2{
+            font-weight: 400;
+        }
         .qr_close {
             text-align: right;
             padding: 5px 10px 0 10px;
             font-size: 16px;
             font-family: Arial, sans-serif;
             color: #939393;
+            cursor: pointer;
         }
         .qr_img {
             width: 150px;
@@ -147,6 +146,7 @@
                 font-size: 16px;
                 font-family: Arial, sans-serif;
                 color: #939393;
+                cursor: pointer;
             }
             h2 {
                 line-height: 26px;
@@ -181,6 +181,7 @@
                 font-size: 16px;
                 font-family: Arial, sans-serif;
                 color: #939393;
+                cursor: pointer;
             }
             h2 {
                 line-height: 26px;
@@ -237,12 +238,14 @@
             h2 {
                 text-align: center;
                 font-size: 16px;
+                font-weight: 400;
             }
             .text {
                 padding: 10px 0;
                 textarea {
                     width: 95%;
                     height: 100px;
+                    border: 1px solid #dfdfdf;
                 }
             }
             .text_num {
@@ -250,7 +253,6 @@
                 p {
                     text-align: right;
                     font-size: 10px;
-                    font-weight: 700;
                 }
             }
             .checked {
@@ -275,6 +277,10 @@
                     padding: 3px 10px;
                     font-size: 12px;
                     vertical-align: middle;
+                    appearance: none;
+                    -moz-appearance: none;
+                    -webkit-appearance: none;
+                    
                 }
             }
             .footer {
@@ -311,29 +317,35 @@
                 font-size: 16px;
                 font-family: Arial, sans-serif;
                 color: #939393;
+                cursor: pointer;
             }
             h2 {
                 text-align: center;
                 font-size: 16px;
+                font-weight: 400;
             }
             .text {
                 padding: 10px 0;
                 textarea {
                     width: 95%;
                     height: 100px;
+                    border: 1px solid #dfdfdf;
                 }
             }
             .text_num {
                 // display: none;
+                padding: 0 14px;
+                box-sizing: border-box;
                 p {
                     text-align: right;
                     font-size: 10px;
-                    font-weight: 700;
                 }
             }
             .checked {
                 div {
                     text-align: left;
+                    padding: 0 6px;
+                    box-sizing: border-box;
                 }
                 label {
                     font-size: 12px;
@@ -344,7 +356,8 @@
             }
             .btn {
                 text-align: right;
-                padding: 10px 0;
+                padding: 10px 14px;
+                box-sizing: border-box;                
                 input {
                     color: #fff;
                     background-color: #7db3dd;
@@ -353,10 +366,15 @@
                     padding: 3px 10px;
                     font-size: 12px;
                     vertical-align: middle;
+                    appearance: none;
+                    -moz-appearance: none;
+                    -webkit-appearance: none;
+                    cursor: pointer;
                 }
             }
             .footer {
-                padding: 6px;
+                padding: 10px 14px;
+                box-sizing: border-box;
                 border-top: 1px dashed #c5c5c5;
                 text-align: right;
                 p {
